data/derived/comb/progs/unify/prog5976.ml.out
Characters 84-85:
  |Sine i -> "sin" ^ i;;
                     ^
Error: This expression has type expr but an expression was expected of type
         string
